Update Auth.java